--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@automapper/classes": "^8.8.1",
     "@automapper/core": "^8.8.1",
     "@automapper/nestjs": "^8.8.1",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/bullmq": "^11.0.2",
@@ -41,6 +42,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.11",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^8.1.1",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^10.4.11",
@@ -49,6 +51,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "file-type": "^20.4.1",
+    "get-video-duration": "^4.1.0",
     "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
