--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/axios": "^3.1.3",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.0",
@@ -51,6 +52,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "file-type": "^20.4.1",
+    "form-data": "^4.0.2",
     "get-video-duration": "^4.1.0",
     "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
@@ -73,6 +75,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
+    "@types/form-data": "^2.2.1",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
