--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/swagger": "^8.1.1",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^10.4.11",
+    "@socket.io/redis-adapter": "^8.3.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.41.5",
     "class-transformer": "^0.5.1",
@@ -54,7 +55,7 @@
     "file-type": "^20.4.1",
     "form-data": "^4.0.2",
     "get-video-duration": "^4.1.0",
-    "ioredis": "^5.5.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "nest-winston": "^1.10.2",
