Add Prober documentation

--- a/.env.exmpale
+++ b/.env.exmpale
@@ -16,3 +16,4 @@ FRONTEND_DOMAIN=localhost
 FRONTEND_PORT=5173
 FRONTEND_PROTOCOL=http
 FRONTEND_VERIFY_RELATIVE_URL=signUp/verifyEmail
+AIBASEURL=http://abdullahabaza.me/api
