--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     depends_on:
       - cache
       - database
+      - gotenberg
 
   cache:
     container_name: backendCache
@@ -53,6 +54,16 @@ services:
       - backendDocs:/srv/docs
     depends_on:
       - backend
+    networks:
+      - backend_net
+
+      
+  gotenberg:
+    container_name: "gotenberg_backend"
+    image: gotenberg/gotenberg:8
+    restart: unless-stopped
+    ports:
+      - "3001:3000"
     networks:
       - backend_net
 
