--- a/.env.exmpale
+++ b/.env.exmpale
@@ -17,3 +17,4 @@ FRONTEND_PORT=5173
 FRONTEND_PROTOCOL=http
 FRONTEND_VERIFY_RELATIVE_URL=signUp/verifyEmail
 AIBASEURL=http://abdullahabaza.me/api
+GotenbergUrl=http://Gotenberg:3001
