--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "file-type": "^20.4.1",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.2",
     "get-video-duration": "^4.1.0",
     "ioredis": "^5.6.1",
